--- a/2015-11-9-About.md
+++ b/2015-11-9-About.md
@@ -5,7 +5,7 @@ title: About Me
 
 Hello! I'm Dylan Rose. Here is a silly picture of me:
 
-(/assets/silly_picture.jpg){: .center-image }
+![Test.](/assets/silly_picture.jpg){: .center-image }
 
 Currently, I'm a PhD student in Peter Bex's Translational Vision Laboratory at Northeastern University. I'm interested in a couple of biggish research areas:
 
