Added Rough Draft of 11-17 Post

--- a/2015-11-9-About.md
+++ b/2015-11-9-About.md
@@ -13,9 +13,9 @@ Here is a silly picture of me from a long time ago:
 It was a simpler time.
 
 ##What on Earth could someone with such a dumb haircut possibly spend his days doing!?
-At the moment, I'm doing research in a couple of broad fields:
+At the moment, I'm doing research in a couple of areas:
 
-1. Developing methods to enhance oculomotor control in complex environments for individuals with:
+1. Developing methods to enhance oculomotor control in/improve information gathering from complex environments for individuals with:
    * Central visual field loss.
    * Various "-opsias" (disease states that produce blindness in portions of the visual field).
 2. The use of eye movement data, in conjunction with image processing and machine learning methods, to perform biometric tasks, such as:
