adds updated cv link to cv page

--- a/2015-7-30-CV.md
+++ b/2015-7-30-CV.md
@@ -3,4 +3,4 @@ layout: page
 title: CV
 ---
 
-My academic CV can be accessed here and also in NIH format here.
+My academic CV can be accessed [here]({{site.url}}/assets/resume.pdf) and also in NIH format here.
